--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Webshop</title>
+
+    <link rel="stylesheet" href="./CSS/stylesheet.css">
+</head>
+    <header>
+        <h1>My Webshop</h1>
+        <ul>
+            <li>
+                <a href="index.html">HOME</a>
+            </li>
+            <li>
+                <a href="about.html">ABOUT</a>
+            </li>
+            <li>
+                <a href="contact.html">CONTACT</a>
+            </li>
+        </ul>
+    </header>
+    <body>
+        <h1>Welcome</h1>
+        <p>This is My Webshop</p>
+    </body>
+    <footer>
+        <p>&copy 2024 Jochem Grootherder</p>
+    </footer>
+</html>
