Added basic css

--- a/about.html
+++ b/about.html
@@ -10,15 +10,15 @@
 </head>
     <header>
         <h1>My Webshop</h1>
-        <ul>
-            <li>
-                <a href="index.html">HOME</a>
+        <ul class="nav-menu">
+            <li class="nav-menu-item">
+                <a href="index.html" class="menu-link">HOME</a>
             </li>
-            <li>
-                <a href="about.html">ABOUT</a>
+            <li class="nav-menu-item">
+                <a href="about.html" class="menu-link">ABOUT</a>
             </li>
-            <li>
-                <a href="contact.html">CONTACT</a>
+            <li class="nav-menu-item">
+                <a href="contact.html" class="menu-link">CONTACT</a>
             </li>
         </ul>
     </header>
