--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,14 @@
 
             <!-- Text input-->
             <div class="form-group">
+                <label class="control-label" for="phonenumber">Phone number</label>
+                <input id="phonenumber" name="phonenumber" type="text" placeholder="+31612345678" class="form-control"
+                    required="">
+
+            </div>
+
+            <!-- Text input-->
+            <div class="form-group">
                 <label class="control-label" for="streetname">Streetname</label>
                 <input id="streetname" name="streetname" type="text" placeholder="Streetname" class="form-control"
                     required="">
