Start with posting the form

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                 <a href="about.html" class="menu-link">ABOUT</a>
             </li>
             <li class="nav-menu-item">
-                <a href="contact.html" class="menu-link">CONTACT</a>
+                <a href="contact.php" class="menu-link">CONTACT</a>
             </li>
         </ul>
     </header>
@@ -56,6 +56,6 @@
         </p>
     </body>
     <footer>
-        <p>&copy 2024 Jochem Grootherder</p>
+        &copy 2024 Jochem Grootherder
     </footer>
 </html>
