--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +19,7 @@
                 <a href="about.html" class="menu-link">ABOUT</a>
             </li>
             <li class="nav-menu-item">
-                <a href="contact.html" class="menu-link">CONTACT</a>
+                <a href="contact.php" class="menu-link">CONTACT</a>
             </li>
         </ul>
     </header>
@@ -27,6 +28,6 @@
         <p>This is My Webshop</p>
     </body>
     <footer>
-            &copy 2024 Jochem Grootherder
+        &copy 2024 Jochem Grootherder
     </footer>
 </html>
